# vebmimesisify

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
vebmimesisify/: __init__.py  scenarios.py
vebmimesisify/vebmimesisify.egg-info/: PKG-INFO  SOURCES.txt
